code/force-app/main/default/objects/Public_Event_Notification__c/Public_Event_Notification__c.object-meta.xml
<CustomObject>
    <label>公開關鍵提醒</label>
    <nameField>
        <label>事件內容</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>