code/force-app/main/default/objects/Public_Event_Notification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>公開關鍵提醒</relationshipLabel>
    <relationshipName>Public_Event_Notification</relationshipName>
    <type>Lookup</type>
</CustomField>