code/force-app/main/default/objects/Public_Event_Notification__c/fields/Public_Event_Notification_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Public_Event_Notification_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>公開關鍵提醒外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>