code/force-app/main/default/objects/Public_Event_Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEJ重大事件</fullName>
            </value>
            <value>
                <fullName>負面新聞</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>