code/force-app/main/default/objects/Public_Event_Notification__c/listViews/Negative_News.listView-meta.xml
<ListView>
    <fullName>Negative_News</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>負面新聞</value>
    </filters>
    <label>負面新聞</label>
</ListView>