code/force-app/main/default/objects/Public_Event_Notification__c/listViews/TEJ.listView-meta.xml
<ListView>
    <fullName>TEJ</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>TEJ重大事件</value>
    </filters>
    <label>TEJ重大事件</label>
</ListView>